# dataIO

./: .gitignore  CMakeLists.txt  LICENSE  PointCloudIO.hpp  README.md  dataIO.h  dataIO.hpp
examples/: CMakeLists.txt  examples.sln  getFolderFiles.cpp
examples/ExtractKeyptsIO/: ExtractKeypts.cpp  ExtractKeyptsIO.vcxproj  ExtractKeyptsIO.vcxproj.filters
examples/ExtractKeyptsIO/x64/Debug/ExtractKeyptsIO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
examples/PointCloudIO/: PointCloudIO.cpp  PointCloudIO.vcxproj  PointCloudIO.vcxproj.filters
examples/PointCloudIO/x64/Debug/PointCloudIO.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  PointCloudIO.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
examples/Pointcloud_from_RGBD_txt/: Pointcloud_from_RGBD_txt.cpp  Pointcloud_from_RGBD_txt.vcxproj  Pointcloud_from_RGBD_txt.vcxproj.filters
examples/imgIO/: imgIO.cpp  imgIO.vcxproj  imgIO.vcxproj.filters
examples/massiveIO/: massiveIO.cpp  massiveIO.vcxproj  massiveIO.vcxproj.filters
examples/testSamples/ExtractKeypts/: 1_keyPts.txt
examples/testSamples/keyPointcloud/: color3_2D_keypoints.txt  color3_keypoint_cloud.ply
examples/testSamples/txt/: 2d_Points.txt  2d_Points_saved.txt  3d_Points_saved.txt
examples/txtIO/: txtIO.cpp  txtIO.vcxproj  txtIO.vcxproj.filters
examples/x64/Debug/: ExtractKeyptsIO.ilk  Pointcloud_from_img.ilk  imgIO.ilk  massiveIO.ilk  txtIO.ilk
include/: PointCloudIO.hpp  dataIO.hpp
(+18 files in other folders)
